# zm-codex

./: .gitignore  CLAUDE.md  docker-compose.yml
.claude/: settings.json  settings.local.json
.claude/agents/: be-developer.md  build-checker.md  code-reviewer.md  doc-updater.md  fe-developer.md
.claude/hooks/: mistake-guard.sh  notify-done.sh  post-compact.sh  post-review.sh  pre-compact.sh  session-start.sh
.claude/memory/: MEMORY.md  policy-registry.md
.claude/rules/: backend.md  frontend.md  security.md  (+2 more)
backend/: pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: changes.py  channel.py  config.py  dashboard.py  dev.py  fs.py  hooks.py  mcp.py  memories.py  projects.py  stream.py  watcher.py  workflows.py
backend/app/core/: config.py  database.py  events.py
backend/app/models/: __init__.py  code_doc_link.py  config_history.py  document.py  hook_event.py  memory.py  project.py  workflow.py
backend/app/resources/workflow_seeds/: bugfix.md  deployment.md  development.md  review.md
backend/app/schemas/: hook_event.py  mcp.py  memory.py  project.py  watcher.py  workflow.py
backend/app/services/: bm25_search.py  channel.py  chunker.py  config_compare.py  drift.py  embedding.py  ingest.py  linking.py  scanner.py  seed.py  sync.py  template.py  watcher.py  workflow_classifier.py  workflow_sync.py
backend/tests/: README.md  conftest.py  test_mcp_workflow_tools.py  test_workflow_crud.py  test_workflow_templates.py
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.tsbuildinfo  vite.config.ts
(+62 files in other folders)
